styles: fix cta section button alignment

--- a/src/components/base/CtaSection/styles.module.css
+++ b/src/components/base/CtaSection/styles.module.css
@@ -1,6 +1,7 @@
 .footer {
-  max-width: 1250px;
-  padding: 0 0 5rem 6.25rem;
+  max-width: 133rem;
+  padding-bottom: 5rem;
+  padding-left: 6.5rem;
   margin: 0 auto;
 }
 
